# NKriZ-DNS-Connector

./: .gitignore  README.md
NKriZDNSConnector/: DDNSClient.swift  DNSConfiguration.swift  DNSConnectorApp.swift  DNSManager.swift  DNSMenuView.swift  DNSViewModel.swift  Info.plist
NKriZDNSConnector.xcodeproj/: project.pbxproj
linux/: Cargo.toml  Cross.toml  README.md  native  nkriz-dns-connector-autostart.desktop  nkriz-dns-connector.desktop
linux/scripts/: bootstrap-sysroot.sh  build-linux-native.sh  build-linux.sh  common.sh  install-linux-mint.sh  launch.sh
linux/src/: ddns.rs  dns.rs  main.rs  tray.rs
scripts/: build-and-package.sh
windows/: Cargo.toml
windows/.cargo/: config.toml
windows/scripts/: build-windows.sh
windows/src/: config.rs  ddns.rs  dns.rs  tray.rs
