[package]
name = "nkriz-dns-connector"
version = "1.0.0"
edition = "2021"
description = "NKriZ DNS Connector for Linux (system tray)"

[dependencies]
muda = { version = "0.15", default-features = false, features = ["libxdo"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tray-icon = { version = "0.19", default-features = false }
gtk = { version = "0.18", default-features = false }

[profile.release]
strip = true
codegen-units = 1
