[package]
name = "nkriz-dns-connector"
version = "1.0.0"
edition = "2021"
description = "NKriZ DNS Connector for Windows (system tray)"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
strip = true
codegen-units = 1
